--- a/docs/content/docs/gateway/getting-started/index.mdx
+++ b/docs/content/docs/gateway/getting-started/index.mdx
@@ -4,6 +4,6 @@ description: Get started with your new router
 ---
 
 <Cards>
-  <Card title="Specifications" href="specification" description="Read the specifications of the router" />
+  <Card title="Specifications" href="getting-started/specifications" description="Read the specifications of the router" external={false} />
 </Cards>
 
