--- a/docs/content/docs/gateway/guides/index.mdx
+++ b/docs/content/docs/gateway/guides/index.mdx
@@ -4,6 +4,7 @@ description: Learn how to configure common things
 ---
 
 <Cards>
-  <Card title="Setup DNS" href="https://fumadocs.vercel.app" description="Configure DNS and learn how to setup a DNS server" />
+  <Card title="Setup DNS" href="guides/setup-dns" description="Configure DNS and learn how to setup a DNS server" external={false} />
+  <Card title="Setup NAT" href="guides/setup-nat" description="Configure Network Address Translation" external={false} />
 </Cards>
 
